// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders Article 1`] = `
<DocumentFragment>
  <div>
    <hr />
    <p>
      title: undefined
    </p>
    <p>
      description: undefined
    </p>
  </div>
</DocumentFragment>
`;

exports[`App component renders Articles 1`] = `
<DocumentFragment>
  <div>
    <p>
      Loading!
    </p>
  </div>
</DocumentFragment>
`;

exports[`App component renders Search 1`] = `
<DocumentFragment>
  <form>
    <input
      data-testid="searchBar"
    />
    <button
      data-testid="submitButton"
    >
       Submit 
    </button>
  </form>
</DocumentFragment>
`;
